# ChangeLog for sci-geosciences/gpscorrelate
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/gpscorrelate/ChangeLog,v 1.4 2008/12/01 18:35:02 hanno Exp $

*gpscorrelate-1.5.8 (01 Dec 2008)

  01 Dec 2008; Hanno Boeck <hanno@gentoo.org>
  +files/gpscorrelate-1.5.8-makefile.diff, +gpscorrelate-1.5.8.ebuild:
  Version bump, much improved Makefile (respect LDFLAGS, build without gtk+,
  fix --as-needed).

  23 Aug 2008; Markus Meier <maekke@gentoo.org> gpscorrelate-1.5.6.ebuild:
  add ~amd64, bug #224325

  16 Jun 2008; Jeroen Roovers <jer@gentoo.org> gpscorrelate-1.5.6.ebuild:
  Marked ~hppa (bug #225357).

*gpscorrelate-1.5.6 (18 May 2008)

  18 May 2008; Hanno Boeck <hanno@gentoo.org>
  +files/gpscorrelate-1.5.6-cflags.patch, +files/gpscorrelate.1,
  +gpscorrelate-1.5.6.ebuild:
  Initial commit, tool for correlating gps data with jpeg images,
  ebuild submitted by jkt in bugzilla.
