@@ -7,13 +7,13 @@ AUX gpscorrelate.1 4025 RMD160 6dd52bf49a3c9919c83ea31cfcf47334faf84124 SHA1 ab9
 DIST gpscorrelate-1.5.6.tar.gz 130623 RMD160 82df0bd18e4cd391a2c74088044f4e95c8f85e46 SHA1 cf80ff0b54c3de8f58f6bda522b113ef5752a1c3 SHA256 cbd75278f8707b63c135af5ec83b4323b17313b23cdd0b29fcb1d786c50e1a2e
 DIST gpscorrelate-1.5.8.tar.gz 135021 RMD160 626f2d1df832fca7554739b6711245b7306d50e3 SHA1 603eb128f844c725a71b8eb295c677c9432490e3 SHA256 b91e8bbcb5539c2fb85a285df179d8b6a2f83f29b3489bc2b6d095e705f12f18
 EBUILD gpscorrelate-1.5.6.ebuild 1025 RMD160 d2fe4e437c509e1adbce5fc7ae863c96680bbbf2 SHA1 bd83203e16152b5282f0a094aba185b6a42a8012 SHA256 90ad390dd10dd26221973738b8a6fba279c235766a3cbbe679d27b21e4ff3046
-EBUILD gpscorrelate-1.5.8.ebuild 1034 RMD160 5281cc2c9769e98aaf02c720b948b6a852b075e7 SHA1 9d75c877fd79008b557c085aa26021ca71f4011b SHA256 67a98794cfb31b2b3fad581732452670b926dc43a1b77b12637135051562696d
-MISC ChangeLog 967 RMD160 4a0263f88a134e7adbe2db94d409c6a1bb3a3326 SHA1 d5c23790da64230624ab51fa6ca4b798978931e6 SHA256 fae66c5e57a3d22b99e07432cddc17fc4ce4c97ad9a7641506506dca5971e740
+EBUILD gpscorrelate-1.5.8.ebuild 1034 RMD160 f53d4752ce480884c7a737c197d9b10e4a118a56 SHA1 565d9a376b43dba2fa6f93ab9d6654d78dd6661d SHA256 5fdb3e14cc1400474f2d400dfe2f13e437e8fca4c0a6cca01b0909eec8d760f3
+MISC ChangeLog 1064 RMD160 9d0476f7e43edede2a971505a696af6d2d192791 SHA1 d12e7c986992988a247a5bbf559afb3a3ab75c2c SHA256 5d10231fc9e4ea963a863d4cb924df0b22c7cedc83df7a0fb967ee5574465a5f
 MISC metadata.xml 237 RMD160 20944f06e761a57587043f3ec7ec969a5ab9bdcc SHA1 33b0366a9efeb0caad5712fb7e628147dff924be SHA256 29eb01e164be9510d6a51d6477c169df641127a2a2df064c9d99c90c067ac3d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk0Lk8ACgkQr2QksT29OyCFdACdEIIs8pqqnf4CAJGWGleQFgkc
-8VgAniZRPu+zAwlEDOyBYyveQZwLx/3A
-=Vlo6
+iEYEARECAAYFAkmc2XsACgkQmOfEJZHYOKeuLwCgkWpNwc+Y2UyV67DQSdhdkITi
+W6oAoI6kb6c1WY2CwrqFuSK2YGZpq2cC
+=ZN18
 -----END PGP SIGNATURE-----
