@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/gpscorrelate/gpscorrelate-1.5.8.ebuild,v 1.1 2008/12/01 18:35:02 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/gpscorrelate/gpscorrelate-1.5.8.ebuild,v 1.2 2009/02/19 04:00:54 tester Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://freefoote.dview.net/linux/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~hppa ~x86"
+KEYWORDS="amd64 ~hppa ~x86"
 IUSE="doc gtk"
 DEPEND="dev-libs/libxml2
 	media-gfx/exiv2
